--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>$LM10GOAT | The GOAT Coin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABgAAAAQACAIAAACoEwUVAADAs2NhQlgAAMCzanVtYgAAAB5...') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Bebas Neue', sans-serif;
+      color: #ffd700;
+      text-align: center;
+    }
 
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 5rem 2rem;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo {
+      width: 240px;
+      max-width: 90%;
+      margin-bottom: 2.5rem;
+    }
+
+    h1 {
+      font-size: 4rem;
+      margin: 0 0 1.2rem 0;
+      letter-spacing: 2px;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-top: 0;
+      margin-bottom: 2rem;
+      letter-spacing: 1px;
+    }
+
+    .buttons {
+      margin-top: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+
+    .buttons a {
+      background-color: #ffd700;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      font-size: 1.3rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .buttons a:hover {
+      background-color: #e6c200;
+    }
+
+    .footer {
+      margin-top: 3rem;
+      font-size: 1.1rem;
+      letter-spacing: 1px;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAADmZmNhQlgAAOZmanVtYgAAAB5..." alt="$LM10GOAT Logo" class="logo" />
+    <h1>$LM10GOAT</h1>
+    <h2>The GOAT Coin for the GOAT Fans</h2>
+    <div class="buttons">
+      <a href="https://x.com/LM10GOATONSOL" target="_blank">Follow on Twitter</a>
+      <a href="https://t.me/LM10GOAT_OFFICIAL" target="_blank">Join Telegram</a>
+    </div>
+    <div class="footer">
+      <p>Token launching soon on pump.fun</p>
+    </div>
+  </div>
+</body>
+</html>
